# Curso-de-Python--UEPB

./: .gitignore  Aula 1 - Fundamentos de Python.ipynb  BibTexParser.ipynb  Matplotlib.ipynb  Numpy.ipynb  Pandas.ipynb  README.md  ReferencesMaster.bib  analise_de_dados_libs.ipynb  fundamentos_de_python.ipynb  main.py
.ipynb_checkpoints/: Aula 1 - Fundamentos de Python-checkpoint.ipynb  Matplotlib-checkpoint.ipynb  Numpy-checkpoint.ipynb  Pandas-checkpoint.ipynb  fundamentos_de_python-checkpoint.ipynb
uepb_python_course/: pyproject.toml
