[project]
name = "uepb-python-course"
version = "0.1.0"
description = ""
authors = [
    {name = "LuizFillip",email = "luizfillip@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "uepb_python_course", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
